# football_dw

./: .gitignore  README.md  pyproject.toml
airflow/: docker-compose.yaml  requirements.txt
airflow/config/: airflow.cfg
airflow/dags/: football_pipeline.py
football_dw/: .user.yml  dbt_project.yml  profiles.yml
football_dw/models/marts/: mart_avg_first_goal.sql  mart_matches.sql  mart_team_goals_stats.sql  mart_team_xg_stats.sql  mart_top_scorer.sql
football_dw/models/staging/: schema.yml  sources.yml  stg_competitions.sql  stg_events.sql  stg_events_shots.sql  stg_matches.sql
ingestion/: load_statsbomb.py
notebooks/: Untitled.ipynb
